Tue Dec  2 21:40:08 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:

          Added method to detect whether link currently has any publications
          or subscriptions registered with it to determine if link is defunct
          and can be released.

        * dds/DCPS/transport/framework/TransportClient.cpp:

          Added check to see if link is defunct before removing the link due
          to asynchronous ability to reuse a datalink and add a pub or sub
          to an existing link after release has begun.

          Added debug logging to help trace asynchronous associations and
          disassociation.

        * dds/DCPS/transport/tcp/TcpDataLink.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Added debug logging to help trace asynchronous associations and
          disassociation during connect_datalink.

Mon Dec  1 18:56:43 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Moved call to release_reservations_i forward in DataLink
          release_reservations to mitigate deadlock between
          RtpsDataLink::lock_ and DataLink::pub_sub_maps_lock_.

Mon Dec  1 18:39:28 UTC 2014  Justin Wilson  <wilsonj@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Wrapped string literal with ACE_TEXT for wide-character builds.

Mon Dec  1 15:22:23 UTC 2014  Justin Wilson  <wilsonj@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Sedp used to associate with endpoints for participants that Spdp
          had not discovered.  Now Sedp caches discovery messages until Spdp
          has discovered the participant.  We need to determine if/when
          cached messages should be discarded.

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
